--- a/admindashboard.css
+++ b/admindashboard.css
@@ -21,7 +21,7 @@ li {
 
 	--light: #F9F9F9;
 	--blue: #d03b3b;
-	--light-blue: #CFE8FF;
+	--light-blue: #edbcb9;
 	--grey: #eee;
 	--dark-grey: #AAAAAA;
 	--dark: #342E37;
