--- a/newproduct.css
+++ b/newproduct.css
@@ -4,7 +4,7 @@
    --red:#d03b3b;
    --black:#333;
    --white:#fff;
-   --green:#1DA440;
+   --green:#d03b3b;
    --bg-color:#eee;
    --box-shadow:0 .5rem 1rem rgba(0,0,0,.1);
    --border:.1rem solid var(--black);
